fix: Fix scrollbar

--- a/gallery.css
+++ b/gallery.css
@@ -50,6 +50,11 @@
   transform: translateX(100%);
 }
 
+
+::-webkit-scrollbar {
+  width: 0;
+}
+
 .gallery.show {
   transform: translateX(0);
 }
